// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldRadio 1`] = `
.c8 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c6 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c6 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c6 .c7 {
  background: #FFFFFF;
}

.c6 input[type='radio']:checked + .c7 {
  background: #0087e1;
  border-color: #0087e1;
}

.c6 input[type='radio']:checked + .c7::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c6 input[type='radio']:focus + .c7 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c6 input[type='radio']:disabled + .c7 {
  opacity: 0.5;
}

.c2 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c5 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c4 {
  color: #343C42;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c1 .c9 {
  width: 100%;
}

.c1 .c10 {
  width: 100%;
}

.c1 .c3 {
  text-align: left;
  margin-right: 0;
  margin-left: 0.5rem;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
  >
    <label
      className="c3 c4"
      color="palette.charcoal700"
      fontSize="xsmall"
      fontWeight="semiBold"
      htmlFor="thumbs-up"
    >
      👍
    </label>
  </div>
  <div
    className="c5"
  >
    <div
      className=""
    >
      <div
        className="c6 "
      >
        <input
          className=""
          id="thumbs-up"
          name="thumbsUp"
          type="radio"
        />
        <div
          className="c7 c8"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldRadio checked 1`] = `
.c8 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c6 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c6 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c6 .c7 {
  background: #FFFFFF;
}

.c6 input[type='radio']:checked + .c7 {
  background: #0087e1;
  border-color: #0087e1;
}

.c6 input[type='radio']:checked + .c7::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c6 input[type='radio']:focus + .c7 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c6 input[type='radio']:disabled + .c7 {
  opacity: 0.5;
}

.c2 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c5 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c4 {
  color: #343C42;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c1 .c10 {
  width: 100%;
}

.c1 .c11 {
  width: 100%;
}

.c1 .c3 {
  text-align: left;
  margin-right: 0;
  margin-left: 0.5rem;
}

.c9 .c3 {
  text-align: right;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
  >
    <label
      className="c3 c4"
      color="palette.charcoal700"
      fontSize="xsmall"
      fontWeight="semiBold"
      htmlFor="thumbs-up"
    >
      👍
    </label>
  </div>
  <div
    className="c5"
  >
    <div
      className=""
    >
      <div
        className="c6 "
      >
        <input
          checked={true}
          className=""
          id="thumbs-up"
          name="thumbsUp"
          type="radio"
        />
        <div
          className="c7 c8"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldRadio with label aligned left 1`] = `
.c7 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c5 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c5 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c5 .c6 {
  background: #FFFFFF;
}

.c5 input[type='radio']:checked + .c6 {
  background: #0087e1;
  border-color: #0087e1;
}

.c5 input[type='radio']:checked + .c6::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c5 input[type='radio']:focus + .c6 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c5 input[type='radio']:disabled + .c6 {
  opacity: 0.5;
}

.c2 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c4 {
  color: #343C42;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c8 .c3 {
  text-align: left;
  margin-right: 0;
  margin-left: 0.5rem;
}

.c1 .c9 {
  width: 100%;
}

.c1 .c10 {
  width: 100%;
}

.c1 .c3 {
  text-align: right;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
  >
    <label
      className="c3 c4"
      color="palette.charcoal700"
      fontSize="xsmall"
      fontWeight="semiBold"
      htmlFor="thumbs-up"
    >
      👍
    </label>
  </div>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <div
        className="c5 "
      >
        <input
          className=""
          id="thumbs-up"
          name="thumbsUp"
          type="radio"
        />
        <div
          className="c6 c7"
        />
      </div>
    </div>
  </div>
</div>
`;
